Bugs in help section and visual on mobile

--- a/who-wants-to-be-millionaire/play/style.css
+++ b/who-wants-to-be-millionaire/play/style.css
@@ -424,6 +424,19 @@ ul {
 
     #helps {
         top: 30vh;
+        left: 10%;
+    }
+
+    .timer {
+        left: 42%;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+
+    .timer {
+        left: 39%;
     }
 
 }
